--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #202142;
-  color: #fff;
+  background-color: #f1f1fc;
+  color: #202142;
   line-height: 1.6;
 }
 
@@ -34,7 +34,7 @@ header {
 
 .card {
   background-color: #fff;
-  color: #333;
+  color: #202142;
   border-radius: 15px;
   padding: 40px 50px;
   margin: 20px 0;
@@ -119,7 +119,7 @@ input:focus {
 }
 
 .feedback-stats {
-  color: #fff;
+  color: #202142;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -189,15 +189,11 @@ input:focus {
   text-align: center;
 }
 
-/* FIX: Remove position: absolute to keep about icon at the bottom of the
- * document */
 .about-link {
   display: flex;
   justify-content: flex-end;
 }
 
-/* FIX: Remove position: absolute to keep about icon at the bottom of the
- * document */
 .about-link a {
   color: #fff;
   cursor: pointer;
@@ -209,6 +205,7 @@ input:focus {
 
 .about h1 {
   margin-bottom: 20px;
+  color: #202142;
 }
 
 .about p {
